# oda-knits-new

./: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  README.md  deploy_application.sh  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  rollback_application.sh  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  config.py  db.py  main.py  repositories.py  seed_products.py  test_main.py
backend/models/: auth.py  common.py  contact.py  content.py  orders.py  products.py  projects.py
backend/repositories/: __init__.py  base.py  contact_messages.py  content.py  orders.py  products.py  projects.py
backend/routes/: admin.py  contact.py  instagram.py  orders.py  payments.py
backend/services/: email.py  payments.py  security.py
database/: connection.py  init-test-db.sql  migrate.py  migrations.py  repositories.py  schema.sql  seed_products.py
database/migrations/: 000_schema.sql  001_add_product_images.sql  002_add_order_payment_reference.sql  003_remove_product_stock.sql
database/repositories/: __init__.py  products.py  projects.py
docs/: salgsbetingelser.md
frontend/: Dockerfile
frontend/src/: App.jsx  App.tsx  api.js  nearest-color.d.ts  styles.css  vite-env.d.ts
frontend/src/api/: adminClient.ts  client.ts  index.ts
frontend/src/components/: About.jsx  AboutCharmScene.jsx  AdminDashboard.jsx  ApplePayButton.jsx  CartDrawer.jsx  CheckoutModal.jsx  CheckoutPage.jsx  (+9 more)
public/: robots.txt
(+82 files in other folders)
