[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oda-knit-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "email-validator==2.2.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.0",
    "psycopg[binary]==3.2.*",
]

[dependency-groups]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
include = ["backend*", "database*"]

[tool.setuptools.package-data]
database = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["backend"]
